# mis-eventos

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
compose/dev/: Dockerfile  start
environment/: .env.dev.enc  .secret_key
migrations/: env.py
migrations/versions/: ad9578885fcc_.py  d4c04c2818a2_.py
scripts/: lint.sh  tests.sh
src/: main.py
src/auth/graphql/: mutations.py  nodes.py
src/auth/middleware/: jwt_middleware.py
src/auth/schemas/: __init__.py  token.py
src/auth/services/: create_tokens.py  jwt_exceptions.py  jwt_manager.py
src/base/: repository.py
src/core/: database.py  password.py  settings.py
src/events/graphql/: nodes.py  queries.py
src/events/models/: __init__.py  attendance.py  event.py  registration.py  resource.py  schedule.py
src/events/repositories/: attendance.py  event.py  registration.py  resource.py  schedule.py
src/events/schemas/: __init__.py  event_status.py  registration_status.py  resource_types.py
src/events/services/: attendance.py  event.py  registration.py  resource.py  schedule.py
src/healthcheck/: repository.py  routers.py  schemas.py
src/healthcheck/graphql/: nodes.py  queries.py
src/users/graphql/: mutations.py  nodes.py  queries.py
src/users/models/: user.py
src/users/repository/: user.py
src/users/schemas/: __init__.py  roles.py
src/users/services/: user.py
tests/: conftest.py
tests/auth/services/: test_create_tokens.py  (+1 more)
tests/healthcheck/: test_repository.py
tests/users/: conftest.py
(+22 files in other folders)
